--- a/src/pages/y-nghia-la-bai/[slug].astro
+++ b/src/pages/y-nghia-la-bai/[slug].astro
@@ -56,7 +56,7 @@ const shareImage = new URL(image, Astro.site).href;
         <nav class="breadcrumbs">
           <a href="/">Trang chủ</a>
           <span class="divider">&raquo;</span>
-          <a href="/y-nghia-la-bai">Ý nghĩa lá bài</a> <span class="divider">&raquo;</span>
+          <a href="/blog/y-nghia-la-bai">Ý nghĩa lá bài</a> <span class="divider">&raquo;</span>
           <span class="current">{title}</span>
         </nav>
 
