--- a/src/pages/y-nghia-la-bai/[slug].astro
+++ b/src/pages/y-nghia-la-bai/[slug].astro
@@ -79,7 +79,7 @@ const groupName = group.charAt(0).toUpperCase() + group.slice(1);
             
             {upright_keywords && upright_keywords.length > 0 && (
               <div class="keywords-box">
-                <h4>Từ khoá xuôi</h4>
+                <h4>Từ khoá lá bài thẳng đứng</h4>
                 <ul class="keywords-list">
                   {upright_keywords.map(kw => <li>{kw}</li>)}
                 </ul>
@@ -88,7 +88,7 @@ const groupName = group.charAt(0).toUpperCase() + group.slice(1);
 
             {reversed_keywords && reversed_keywords.length > 0 && (
               <div class="keywords-box">
-                <h4>Từ khoá ngược</h4>
+                <h4>Từ khoá lá bài ngược</h4>
                 <ul class="keywords-list">
                   {reversed_keywords.map(kw => <li>{kw}</li>)}
                 </ul>
